Сделал moveTo c координатами и передвижением (координата меняется со скоростью)