@@ -5,17 +5,23 @@ import items.*;
 import interfaces.Upperable;
 import animals.humans.Pascoe;
 import animals.humans.Luis;
-import java.util.List;
+
 import java.util.Arrays;
+import java.util.List;
 
 public class Main {
     public static void main(String[] args) throws WakeUpException {
         Cat smack = new Smack(false);
         Grave smacksGrave = new Grave(smack);
 
-        Pascoe pascoe = new Pascoe(false, 80);
-        Luis luis = new Luis(true, 68);
-        List<String> phrasesPascoe = List.of(
+        Pascoe pascoe = new Pascoe(false, 80, 75, 65);
+        pascoe.printCoordinates();
+        Luis luis = new Luis(true, 68, 54, 32);
+        luis.printCoordinates();
+        luis.moveTo(13, 43, 2);
+        luis.printCoordinates();
+
+        List<String> phrasesPascoe = Arrays.asList(
                 "Нельзя открывать дверь",
                 "Не ходи туда, как бы тебе этого ни хотелось.",
                 "Нельзя разрушать этой границы.",
@@ -24,7 +30,7 @@ public class Main {
                 "Помни об этом."
         );
 
-        List<String> phrasesLuis = List.of(
+        List<String> phrasesLuis = Arrays.asList(
                 "Вечернее небо расцвело разноцветными отблесками, словно художник пытался передать на холсте магию заката.",
                 "Старый маяк, словно страж снов, молча освещал темные воды океана, зовя моряков к безопасному пристанищу.",
                 "Аромат свежесваренного кофе наполнил комнату, будто маленький кусочек уюта всплыл в серой повседневности.",
@@ -67,14 +73,12 @@ public class Main {
         pascoe.sayTo(luis, "You're not supposed to open the door.");
         pascoe.lookAt(luis);
         pascoe.sayTo(luis, "Don't go there, no matter how much you want to. This boundary must not be destroyed. Remember: There's more power there than you think. It is an ancient force, and it knows no rest. Remember that.");
+
         System.out.println("Здоровье Luis до установки: " + luis.getHealth());
         luis.setHealth(75); // Пример установки здоровья для Luis
         System.out.println("Здоровье Luis после установки: " + luis.getHealth());
+
         CommunicationMethod.communicate(pascoe, luis, phrasesPascoe, phrasesLuis);
         dream.wakeUp();
-
-
-
-
     }
 }
